(test) SLAM and Pangolin submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ORB-SLAM3-python"]
 	path = ORB-SLAM3-python
 	url = https://github.com/xingruiy/ORB-SLAM3-python.git
+[submodule "Pangolin"]
+	path = Pangolin
+	url = https://github.com/stevenlovegrove/Pangolin.git
